# nbitmask

./: Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md
.cargo/: config.toml
src/: bit_storage.rs  error.rs  lib.rs  serde.rs
tests/: lib.rs
