[package]
name = "nbitmask"
version = "1.0.0"
edition = "2021"
authors = ["Bastien Scheurer <bastien.scheurer.pro@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.1", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = []
serde = ["dep:base64", "dep:serde"]
